# hcc

./: .envrc  .gitignore  BUILD.md  LICENSE  README.md  flake.nix
etc/holycharisma-www/links/: foo.css  foo.html  index.htl  index.html
hcc-client/: .envrc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
hcc-client/assets/: disconnect.html  frame.html  logout.html
hcc-client/css/: app.css  audioplayer.css
hcc-client/js/: app.js  audioplayer.js  encryption.js  htmx.js
hcc-client/scripts/: gen-css.js
hcc-client/src/: app.rs  emoji.rs  encryption.rs  hooks.rs  htmx.rs  lib.rs  media_renderer.rs
hcc-client/src/app/: audioplayer.rs  home.rs  mod.rs  state.rs  tabs.rs
hcc-client/tests/: app.rs
hcc-db/: .envrc  README.md  flake.nix
hcc-db/migration/: Cargo.toml
hcc-db/migration/src/: lib.rs  m01_000001_create_user_table.rs  m01_000002_create_user_attributes_table.rs  m01_000003_create_media_node_table.rs  main.rs
hcc-server/: Cargo.toml  README.md  flake.nix
hcc-server/domain/: Cargo.toml
hcc-server/domain/src/: lib.rs  server_config.rs  session.rs
hcc-server/domain/src/sea_orm/: mod.rs
hcc-server/domain/src/sea_orm/entities/: async_sessions.rs  media_node.rs  mod.rs  prelude.rs  user_attributes.rs  user_email_password.rs
hcc-server/domain/src/sea_orm/user/: model.rs
hcc-server/domain/src/sea_orm/user_attributes/: model.rs  prelude.rs
hcc-server/domain/src/user/: mod.rs  model.rs  prelude.rs
hcc-server/migration/: Cargo.toml  README.md
hcc-server/migration/src/: lib.rs  m01_000001_create_user_table.rs  m01_000002_create_user_attributes_table.rs  m01_000002_create_user_index.rs  m01_000003_create_media_node_table.rs  m01_000003_create_user_attributes_table.rs
hcc-server/src/: main.rs  wiring.rs
hcc-server/src/dao/: media_node.rs  mod.rs  user.rs
hcc-server/src/domain/: mod.rs  session.rs
hcc-server/src/middleware/: authorization.rs  keyring.rs  mod.rs  security.rs  session.rs  user.rs
hcc-server/src/routes/: app.rs  brand.rs  disconnect.rs  dummy_secret.rs  handshake.rs  hcc_frame_js.rs  index.rs  login.rs  logout.rs  mod.rs  promo.rs
hcc-server/src/routes/media/: list.rs
hcc-server/src/routes/user/: login.rs  signup.rs
hcc-server/src/util/: emoji.rs  encryption.rs  jwt.rs  mod.rs  password.rs
hcc-server/templates/: app.html.j2  index.html.j2  login.html.j2  promo.html.j2  signup.html.j2
hcc-server/templates/app/: admin.html.j2  default.html.j2
hcc-server/templates/brand/: footer.html.j2  header.html.j2  sidebar.html.j2  splash.html.j2
hcc-server/templates/js/: hcc_frame.js.j2
hcc-server/templates/media/: list.html.j2  node.html.j2
hcc-server/templates/user/: login.html.j2
scripts/: start_cockroach_db.sh
