# You must change these to your own details.
[package]
name = "hcc-client"
version = "0.1.0"
authors = ["orpheus <orpheus@computerdream.club>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.79"
yew = "0.19.3"
wasm-logger = "0.2.0"
# gloo = "0.6.0"
# gloo-console = "0.2.1"

# some cryptography stuff...
base64 = "0.13.0"
orion = "0.17.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = { version = "0.4.2" }

lazy_static = "1"
getrandom = { version = "0.2", features = ["js"] }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.56"
features = ["console"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.29"
futures = "0.3.21"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
