[package]
name = "hcc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { git = "https://github.com/http-rs/tide", rev = "v0.17.0-beta.1" }
async-std = { version = "1.10.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
async-sqlx-session = { version = "0.4.0", features = ["pg", "async_std"] }

jsonwebtokens = "1"
serde_json = "1"
chrono = "0.4.19"

askama = "0.11.1"